[project]
name = "lol-matchup-analyzer"
version = "0.1.0"
description = "League of Legends ranked matchup analyzer using Riot API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
]

[project.scripts]
lol_tool = "lol_matchup_analyzer.main:main"

[tool.uv]
package = true
